# LisCom

./: CMakeLists.txt  LICENSE  README.md  http_parser.h  main.cpp  nacppInterface.h  nacppTransport.cpp  nacppTransport.h  privateNacpp.cpp  privateNacpp.h  request.cpp  uricodec.cpp  uricodec.h
cmake/modules/: FindSQLite3.cmake
liscom/: CMakeLists.txt  http_parser.c  nacppTransport.cpp  nacppTransport.h  privateNacpp.cpp  privateNacpp.h  request.h
